<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorButton"
    tools:context="com.example.personal.ingles_aplicacion.Login">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/letras_uleam"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo">

        <EditText
            android:id="@+id/l_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutEmail"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/l_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:hint="@string/clave"
            android:inputType="textPassword"
            android:padding="5dp"
            />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/layoutPass"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_login_mod"
        android:text="@string/login"
        android:textColor="@color/colorTextButton"
        android:textSize="20sp"
        android:layout_below="@+id/layoutPass"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/registro"
        android:textColor="@color/colorTextButton"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
